# Pickr

./: .gitignore  .replit  README.md  manage.py  pyproject.toml  rxconfig.py
.web/: reflex.json
Pickr/: Pickr.py
django_project/: settings.py
pickr/: asgi.py  models.py  settings.py  views.py  wsgi.py
