[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]

[tool]
[tool.poetry]
authors = ["Olugbemi Tolulope"]
description = "This is a photo feeds app for designers"
name = "pickr"
version = "0.1.0"
[tool.poetry.dependencies]
Django = "^3.0"
python = "^3.8"
pusher = "3.3.2"
[tool.poetry.dev-dependencies]
