[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]

[tool]
[tool.poetry]
authors = ["Olugbemi Tolulope olugbemiopedepo@gmail.com"]
description = "This is a photo feed app that allows the mass sending of photos, that clear of a short period of time"
name = "pickr"
version = "0.1.0"
license = "Proprietary"
readme = "README.md"
classifiers = [
"Programming Languages : Python : 3",
]
[tool.poetry.dependencies]
python = "^3.8"
[tool.poetry.dev-dependencies]
